--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Roboto+Condensed&display=swap');
+
 * {
   margin: 0;
   padding: 0;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
 nav {
@@ -10,7 +13,7 @@ nav {
 .navbar-nav a {
   text-decoration: none;
   color: #fff;
-  font-family: Arial;
+  font-family: 'Roboto Condensed', sans-serif;
   font-weight: bold;
   transition: 0.4s ease-in-out;
   font-size: 1.2rem;
@@ -127,4 +130,40 @@ main .leftside {
   background: green;
   border: double 2px transparent;
   box-shadow: 0 10px 30 px rgba(118, 85, 225, .3);
+}
+
+.nurseryPage{
+  display: grid;
+  grid-template-columns: 60% 40%;
+}
+.add-nersery{
+  margin: 0;
+  padding: 0;
+}
+.nersery-form-section{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+}
+.add-nersery-heading{
+  margin-top: 4rem;
+  margin-bottom: 1.5rem;
+  font-size: 2rem;
+  color: orange;
+}
+.add-nersery-from{
+  font-size: 1.2rem;
+}
+.add-nersery-from input{
+  border: 1px solid green;
+}
+.nursery-btn{
+  width: 100%;
+  margin: 1rem auto;
+  font-size: 1.2rem;
+  background: green;
+  outline: none;
+  border: none;
 }
