--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -10,15 +10,18 @@ nav {
   background: transparent;
   padding: 20px !important;
 }
+
 .navbar-nav a {
   text-decoration: none;
-  color: #fff;
   font-family: 'Roboto Condensed', sans-serif;
   font-weight: bold;
   transition: 0.4s ease-in-out;
   font-size: 1.2rem;
   margin: 0 .5rem;
-} 
+}
+.navbar-nav .white{
+  color: #fff;
+}
 
 .navbar-nav a:hover {
   color: orange;
@@ -30,6 +33,9 @@ nav {
   font-family: Arial;
   padding-left: 20px;
   padding-top: 10px;
+}
+.navbar-nav .nav-link.active{
+  color: orange !important;
 }
 
 .search {
@@ -72,12 +78,14 @@ nav {
 .srch:focus {
   outline: none;
 }
+
 main {
   background: linear-gradient(to top, rgba(0, 0, 0, 0.5)50%, rgba(0, 0, 0, 0.5)50%), url(./assets/1.jpg);
   background-position: center;
   background-size: cover;
   height: 100vh;
 }
+
 main .leftside {
   margin-top: 10rem;
 }
@@ -104,7 +112,7 @@ main .leftside {
   color: #fff;
   margin-top: 20px;
   font-size: 70px;
-  margin-bottom: 25px;
+  margin-bottom: 20px;
 }
 
 .leftside h2 {
@@ -132,34 +140,40 @@ main .leftside {
   box-shadow: 0 10px 30 px rgba(118, 85, 225, .3);
 }
 
-.nurseryPage{
+.nurseryPage {
   display: grid;
   grid-template-columns: 60% 40%;
 }
-.add-nersery{
+
+.add-nersery {
   margin: 0;
   padding: 0;
 }
-.nersery-form-section{
+
+.nersery-form-section {
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
   align-content: center;
 }
-.add-nersery-heading{
+
+.add-nersery-heading {
   margin-top: 4rem;
   margin-bottom: 1.5rem;
   font-size: 2rem;
   color: orange;
 }
-.add-nersery-from{
+
+.add-nersery-from {
   font-size: 1.2rem;
 }
-.add-nersery-from input{
+
+.add-nersery-from input {
   border: 1px solid green;
 }
-.nursery-btn{
+
+.nursery-btn {
   width: 100%;
   margin: 1rem auto;
   font-size: 1.2rem;
