--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,6 +6,7 @@
   font-family: 'Roboto Condensed', sans-serif;
 }
 
+/* ------------------ navbar ------------------ */
 nav {
   background: transparent;
   padding: 20px !important;
@@ -19,7 +20,8 @@ nav {
   font-size: 1.2rem;
   margin: 0 .5rem;
 }
-.navbar-nav .white{
+
+.navbar-nav .white {
   color: #fff;
 }
 
@@ -34,10 +36,14 @@ nav {
   padding-left: 20px;
   padding-top: 10px;
 }
-.navbar-nav .nav-link.active{
+
+.navbar-nav .nav-link.active {
   color: orange !important;
 }
 
+/* ------------------ end navbar ------------------ */
+
+/* ------------------ search box ------------------ */
 .search {
   display: flex;
   justify-content: center;
@@ -45,28 +51,26 @@ nav {
 
 .srch {
   font-family: 'Times New Roman';
-  width: 130px;
-  height: 30px;
+  width: 150px;
+  height: 40px;
   background: transparent;
   border: 1px solid orange;
-  margin-top: 0px;
   color: #fff;
   border-right: none;
-  font-size: 16px;
-  float: left;
+  font-size: 1.2rem;
   padding: 10px;
   border-bottom-left-radius: 5px;
   border-top-left-radius: 5px;
 }
 
 .btnn {
-  width: 60px;
-  height: 30px;
+  width: 80px;
+  height: 40px;
   background: orange;
   border: 2px solid orange;
   margin-top: 0px;
   color: white;
-  font-size: 15px;
+  font-size: 1.2rem;
   border-bottom-right-radius: 5px;
   border-bottom-right-radius: 5px;
 }
@@ -79,6 +83,20 @@ nav {
   outline: none;
 }
 
+input[type="search"]::-webkit-search-cancel-button {
+  -webkit-appearance: none;
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  margin-left: 10px;
+  background:
+    linear-gradient(45deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 43%, #000 45%, #000 55%, rgba(0, 0, 0, 0) 57%, rgba(0, 0, 0, 0) 100%),
+    linear-gradient(135deg, transparent 0%, transparent 43%, #000 45%, #000 55%, transparent 57%, transparent 100%);
+}
+
+/* ------------------ end search box ------------------ */
+
+/* ------------------ banner area ------------------ */
 main {
   background: linear-gradient(to top, rgba(0, 0, 0, 0.5)50%, rgba(0, 0, 0, 0.5)50%), url(./assets/1.jpg);
   background-position: center;
@@ -140,6 +158,9 @@ main .leftside {
   box-shadow: 0 10px 30 px rgba(118, 85, 225, .3);
 }
 
+/* ------------------ end banner area ------------------ */
+
+/* ------------------ Add Nursery page ------------------ */
 .nurseryPage {
   display: grid;
   grid-template-columns: 60% 40%;
@@ -181,3 +202,68 @@ main .leftside {
   outline: none;
   border: none;
 }
+
+/* ------------------ end Add Nursery page ------------------ */
+
+/* ------------------ display Nursery section ------------------ */
+.displayNursery-container {
+  padding: 3rem 0;
+  background: #dcdde1;
+}
+
+.displayNursery-container h3 {
+  text-align: center;
+  font-size: 1.3rem;
+}
+
+.displayNursery-container h3 span {
+  margin-left: .3rem;
+  font-style: italic
+}
+
+.displayNursery-container .displayNursery {
+  margin: 3rem 0;
+}
+
+.displayNursery-container .displayNursery .nursery-details .details {
+  margin: 1rem;
+}
+
+.displayNursery-container .displayNursery .nursery-details .details h2 {
+  margin-bottom: 1rem;
+  font-weight: bold;
+}
+
+.displayNursery-container .displayNursery .nursery-details .details p {
+  margin-bottom: 2rem;
+}
+
+.displayNursery-container .displayNursery .nursery-details .details .call-to-action {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.displayNursery-container .displayNursery .nursery-details .details .call-to-action .call-now {
+  padding: 0.6rem 1.1rem;
+  font-size: 1.2rem;
+  background: transparent;
+  color: #000;
+  border: 2.4px solid green;
+}
+.displayNursery-container .displayNursery .nursery-details .details .call-to-action .view-map {
+  padding: 0.6rem 1.1rem;
+  font-size: 1.2rem;
+  background: green;
+  color: #fff;
+  border: none;
+}
+.displayNursery-container .displayNursery .nursery-details .details .call-to-action i{
+  font-size: 1.2rem;
+  margin-left: .3rem;
+}
+
+.displayNursery-container .nursery-images img {
+  height: 170px !important;
+}
+
+/* ------------------ end display Nursery section ------------------ */
