--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -281,3 +281,63 @@ main .leftside {
 }
 
 /* ------------------ end display Nursery section ------------------ */
+
+/* Styles for contact information boxes */
+.contact-info {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.contact-box {
+  text-align: center;
+  width: 200px;
+  padding: 20px;
+  background-color: #f1f1f1;
+  border-radius: 5px;
+}
+
+.contact-box h2 {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+.contact-form {
+  margin-top: 30px;
+  text-align: center;
+
+}
+
+.contact-form h2 {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.contact-form form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.contact-form input,
+.contact-form textarea {
+  width: 300px;
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
+.mysection input::placeholder,
+.mysection textarea::placeholder {
+  color: black;
+}
+
+.mysection .contact-form button {
+  padding: 10px 20px;
+  background-color: #4CAF50;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
